--- a/SireMound/css/styles.css
+++ b/SireMound/css/styles.css
@@ -30,10 +30,25 @@ div.tab button.active {
     background-color: #ccc;
 }
 
-/* Style the tab content */
+/* Style the tab content */  
 .tabcontent {
     display: none;
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
+}
+
+/* 讀取棒 */
+#sireProgress {
+  width: 50%;
+  background-color: #ddd;
+}
+
+#sireBar {
+  width: 1%;
+  height: 15px;
+  background-color: #4CAF50;
+  text-align: center;
+  line-height: 30px;
+  color: white;
 }
