--- a/SireMound/css/styles.css
+++ b/SireMound/css/styles.css
@@ -1,5 +1,15 @@
 ﻿@charset "utf-8";
 body {font-family: sans-serif, "新細明體";}
+.title {
+    font-weight: bold;
+    font-size: 18px;
+}
+.status {
+    float: right;
+    font-size: 18px;
+    padding: 3px;
+    font-weight: bold;
+}
 
 /* Style the tab */
 div.tab {
