--- a/SireMound/css/styles.css
+++ b/SireMound/css/styles.css
@@ -1,5 +1,5 @@
 ﻿@charset "utf-8";
-body {font-family: sans-serif, "新細明體";}
+body {font-family: sans-serif, "微軟正黑體";}
 .title {
     font-weight: bold;
     font-size: 18px;
@@ -15,29 +15,30 @@ body {font-family: sans-serif, "新細明體";}
 div.tab {
     overflow: hidden;
     border: 1px solid #ccc;
-    background-color: #f1f1f1;
+    background-color: #555;
 }
 
 /* Style the buttons inside the tab */
 div.tab button {
     background-color: inherit;
+    color: white;
     float: left;
     border: none;
     outline: none;
     cursor: pointer;
     padding: 8px 10px;
     transition: 0.3s;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 /* Change background color of buttons on hover */
 div.tab button:hover {
-    background-color: #ddd;
+    background-color: #000;
 }
 
 /* Create an active/current tablink class */
 div.tab button.active {
-    background-color: #ccc;
+    background-color: #4CAF50;
 }
 
 /* Style the tab content */  
