--- a/CraftingIdle/css/styles.css
+++ b/CraftingIdle/css/styles.css
@@ -32,7 +32,7 @@
 	}
 
 	#Logobar #logo {
-	  font-size: 20px;
+	  font-size: 32px;
 	  font-weight: bold;
 	  transition: 0.5s;
 	}
@@ -52,9 +52,13 @@
 	#Logobar-left {
 	  float: left;
 	}
+	
+	#result{
+	  float: center;
+	}
 
 	#bottombar {
-	  background-color: #090909;
+	  background-color: #222;
 	  position: fixed;
 	  bottom: 0px;
 	  width: 100%;
@@ -77,3 +81,43 @@
 	  background-color: #ddd;
 	  color: black;
 	}
+	
+	#object {
+		text-align: center;
+		margin:center;
+	}
+	
+	.floating{
+	  animation-name: floating;
+	  -webkit-animation-name: floating;
+
+	  animation-duration: 1.5s;	
+	  -webkit-animation-duration: 1.5s;
+
+	  animation-iteration-count: infinite;
+	  -webkit-animation-iteration-count: infinite;
+}
+
+	@keyframes floating {
+	0% {
+		transform: translateY(0%);	
+	}
+	 50% {
+		transform: translateY(5%);	
+	}	
+	100% {
+		transform: translateY(0%);
+	}			
+}
+
+	@-webkit-keyframes floating {
+	0% {
+		-webkit-transform: translateY(0%);	
+	}
+	50% {
+		-webkit-transform: translateY(5%);	
+	}	
+	100% {
+		-webkit-transform: translateY(0%);
+	}			
+}
