--- a/CraftingIdle/css/styles.css
+++ b/CraftingIdle/css/styles.css
@@ -2,7 +2,7 @@
 	* {box-sizing: border-box;}
 
 	body {
-		background-color: #111;
+		background-color: #F7F7F7;
 		margin: 0;
 		color: white;
 		font-family: Microsoft JhengHei;
