--- a/CraftingIdle/css/styles.css
+++ b/CraftingIdle/css/styles.css
@@ -2,9 +2,9 @@
 	* {box-sizing: border-box;}
 
 	body {
-		background-color: #F7F7F7;
+		background-color: #1E1E1E;
 		margin: 0;
-		color: #AAA6A2;
+		color: #F7F7F7;
 		font-family: Microsoft JhengHei;
 		font-size:24px
 	}
