--- a/CraftingIdle/css/styles.css
+++ b/CraftingIdle/css/styles.css
@@ -24,7 +24,7 @@
 
 	#Logobar a {
 	  float: left;
-	  color: #F7F7F7;
+	  color: ##37a580;
 	  text-align: center;
 	  padding: 5px 5px;
 	  text-decoration: none;
@@ -40,7 +40,7 @@
 
 	#Logobar a:hover {
 	  background-color: #ddd;
-	  color: black;
+	  color: #F7F7F7;
 	  transition: 0.5s;
 	}
 
