--- a/CraftingIdle/css/styles.css
+++ b/CraftingIdle/css/styles.css
@@ -24,7 +24,7 @@
 
 	#Logobar a {
 	  float: left;
-	  color: ##37a580;
+	  color: #37a580;
 	  text-align: center;
 	  padding: 5px 5px;
 	  text-decoration: none;
