--- a/CraftingIdle/css/styles.css
+++ b/CraftingIdle/css/styles.css
@@ -99,30 +99,20 @@
 		text-decoration:underline;
 	}
 #WRAPPER {
- 
     margin:0 auto;
- 
-    width:880px;
- 
-    padding:0 10px;
- 
-    background-image:url(images/center.jpg);
- 
+    width:90%;
+    padding:0 5px;
     overflow:hidden; /* 當內部有 <div> 使用 float 的時候，父層的 <div> 高度會壞掉 */
                      /* 使用 overflow:hidden; 是最簡單破解這個問題的方法 */
 }
  
 #SIDE {
- 
-    width:170px; /* <div> 要設定寬度，才能配合 float 做水平靠左或靠右排列 */
- 
+    width:30%; /* <div> 要設定寬度，才能配合 float 做水平靠左或靠右排列 */
     float:left; /* 使用 float 讓這個 <div> 做水平靠左排列 */
  
 }
  
 #CONTENT {
- 
     width:auto; /* 設定 auto 就會自動伸縮，這是 <div> 的預設值，所以可以省略不寫 */
- 
-    margin-left:170px; /* 上面的 #SIDE <div> 寬度是 170px */
+    margin-left:30%; /* 上面的 #SIDE <div> 寬度是 170px */
                            /* 這個 #CONTENT 設定左間距可以避免多出來的內容文字和上面的 <div> 重疊 */
