--- a/CraftingIdle/css/styles.css
+++ b/CraftingIdle/css/styles.css
@@ -109,7 +109,7 @@
 #SIDE {
     width:30%; /* <div> 要設定寬度，才能配合 float 做水平靠左或靠右排列 */ 
     height:70%;
-    float:left; /* 使用 float 讓這個 <div> 做水平靠左排列 */
+    float:right; /* 使用 float 讓這個 <div> 做水平靠左排列 */
     overflow:auto;
 }
  
