--- a/AgoLan/css/style.css
+++ b/AgoLan/css/style.css
@@ -21,6 +21,7 @@
         }
         topnav
         { 
+            opacity: 0.9;
             width: 100%;
             height: 140px;
             z-index: 99;
@@ -111,10 +112,12 @@
             text-align: center;
             padding: 30px 0px 100px 0px;
         }
+        nav a:first-child{
+            border-bottom:2px solid gold ;
+        }
         nav a{
             background-color: none;
             text-decoration: none;
-            border-radius:5px;
             color: black;
             padding: 5px 10px;
         }
