--- a/AgoLan/css/style.css
+++ b/AgoLan/css/style.css
@@ -19,26 +19,23 @@
             width: 800px;
             height: 450px;
         }
-        topnav
-        { 
-            opacity: 0.9;
+        .topnav
+        {   
+            font-size:  18px;
+            z-index: 99;
             width: 100%;
             height: 140px;
-            z-index: 99;
+            position:fixed;
+            flex-wrap: wrap;
+            justify-content: space-center;
+            opacity: 0.9;
             background-color: white;
             transition: top 0.3s;
-            top:auto;
             left: 0;
             top: 0;
-            margin: auto;
-            position:fixed;
-
-            display:inline-block;
-            font-size:  20px;
-            padding: 5px 10px;
             text-align: center;
         }
-        topnav a{
+        .topnav a{
             float:none;
             background-color: none;
             text-decoration: none;
@@ -64,8 +61,8 @@
             cursor: pointer;
             text-align: center;
             width: 230px;
-            height: 300px;
-            border: 1px solid beige;
+            height: 320px;
+            border: 0px;
             box-sizing: border-box;
             margin: 5px;
         }
@@ -75,14 +72,13 @@
         }
         .item:hover .pic2 img
         {
-            filter: brightness(35%);
+            filter: brightness(50%);
             opacity: 100;
         }
         .pic 
         {
             position: absolute;
             width: 230px;
-            height: 300px;
         }
         .pic1 img
         {
@@ -98,57 +94,18 @@
             transition: 0.2s;
             opacity: 0;
         }
-        .txt h3
-        {
-            font-weight: normal;
-            font-size: 16px;
-            text-align:center;
-            margin: 10px 10px;
-        }
-        nav
-        { 
-            width: 100%;
-            font-size:  24px;
-            text-align: center;
-            padding: 30px 0px 100px 0px;
-        }
-        nav a:first-child{
-            border-bottom:2px solid gold ;
-        }
-        nav a{
-            background-color: none;
-            text-decoration: none;
-            color: black;
-            padding: 5px 10px;
-        }
-        nav a:hover{
-            color: #eeeeee;
-        }
-        .txt hr
-        {
-            height:2px;
-            border-width:0;
-            width: 32px;
-            background-color:gold;
-        }
-        hr{
-            width: 99%;
-            height:1px;
-            border-width:0;
-            background-color: #eee;
-        }
         .item input#button
         {
             width: 208px;
-            height: 48px;
+            height: 40px;
             cursor: pointer;
             display: none;
             background-color: white;
             border-radius: 5px;
             transition: 0.2s;
             border: 0px solid white;
-            position: relative;
-            bottom: 128px;
+            position: absolute;
+            bottom: 88px;
             left: 10px;
         }
         .item input#button:hover
@@ -160,6 +117,72 @@
         {
             color: white;
             background-color: olive;
+        }
+        .page
+        {
+            width: 960px;
+            height: 64px;
+            font-size:  14px;
+
+            margin: auto;
+            text-align: center;
+        }
+        .page a:first-child{
+
+            border-bottom:2px solid gold ;
+            
+        }
+        .page a{
+            text-align: center;
+            text-decoration: none;
+            color: black;
+            padding: 5px 5px 5px 5px ;
+        }
+        .txt hr
+        {
+            height:2px;
+            border-width:0;
+            width: 30px;
+            background-color:gold;
+        }
+        .txt h2
+        {
+            font-weight: normal;
+            letter-spacing:5px;
+            font-size: 20px;
+            text-align:center;
+            margin: 5px 5px;
+
+        }
+        .txt h3
+        {
+            font-weight: normal;
+            font-size: 14px;
+            text-align:center;
+            margin: 5px 5px;
+        }
+        .txt p{
+            font-size: 16px;
+            font-weight: bold;
+            color: gold;
+            text-align:center;
+            padding:  0px 0px 0px 0px;
+            line-height: 0px;
+            margin: 10px 10px;
+            
+        }
+        .txt s{
+            font-size: 14px;
+            color: gray;
+            text-align:center;
+            line-height: 0px;
+            margin: 10px 10px;
+        }
+        hr{
+            width: 99%;
+            height:1px;
+            border-width:0;
+            background-color: #eee;
         }
         .infoabout
         {
@@ -183,22 +206,18 @@
             color: #303030;
             display: block;
         }
-        .txt p{
-            color: gold;
-            text-align:center;
-            margin: 10px 10px;
-            margin-bottom: 10px;
-        }
-        .copyright
+        footer
         {
+            height: 64px;
+            display: block;
             width: 100%;
-            height: 75px;
             background-color: #eeeeee;
             margin: auto;
+            position: absolute;
         }
-        .copyright p
+        footer p
         {
-            padding: 30px 30px;
+            padding: 10px 10px;
             font-size: 14px;
             text-align: center;
         }
