--- a/AgoLan/css/style.css
+++ b/AgoLan/css/style.css
@@ -22,7 +22,7 @@
         .topnav
         {   
             font-size:  18px;
-            z-index: 99;
+            z-index: 50;
             width: 100%;
             height: 140px;
             position:fixed;
@@ -35,13 +35,61 @@
             top: 0;
             text-align: center;
         }
-        .topnav a{
-            float:none;
-            background-color: none;
+        input#button.prodbtn{
+            font-size: 18px;
+            cursor: pointer;
+            background-color: white;
+            border: 0px none black;
             text-decoration: none;
-            border-radius:5px;
             color: black;
             padding: 5px 10px;
+        }
+        .product
+        {   
+            filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.5));
+            z-index: 51;
+            line-height: 2;
+            width: 150px;
+            height: 138px;
+            background-color:white;
+            position: fixed;
+            top: 70px;
+            left: 305px;
+            display: inline-block;
+            transition: 0.3s;
+        }
+        .prodbtn:hover .product
+        {
+            display: none;
+        }
+        .product a
+        {
+            color: black;
+            text-decoration: none;
+            display: inline-block;
+        }
+        input#button:hover .product{
+            display: none;
+        }
+        .homelife
+        {   
+            filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.5));
+            z-index: 51;
+            line-height: 2;
+            width: 150px;
+            height: 138px;
+            background-color:white;
+            position: fixed;
+            top: 70px;
+            left: 555px;
+            display: inline-block;
+            transition: 0.3s;
+        }
+        .homelife a
+        {
+            color: black;
+            text-decoration: none;
+            display: inline-block;
         }
         .banner img
         {
@@ -73,7 +121,7 @@
         .item:hover .pic2 img
         {
             filter: brightness(50%);
-            opacity: 100;
+            opacity: 1;
         }
         .pic 
         {
