--- a/AgoLan/css/style.css
+++ b/AgoLan/css/style.css
@@ -4,10 +4,34 @@ body {
     margin: 0px;   
     line-height: 1;
 }
+.toprightbar
+{
+    z-index: 51;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+}
+.toprightbar a
+{   
+    font-size: 14px;
+    padding: 5px 5px;
+    color: black;
+}
+input#search
+{
+    border:0;
+    background-color: none;
+    width: 0;
+    transition: 0.5s;
+}
+input#search:hover
+{
+    border-bottom: 1px solid gray;
+    width: 125px;
+}
 .banner 
 {
-    width: 960px;
-    height: 450px;
+    width: 100%;
     margin: auto;
     padding: 160px 0px 50px 0px;
     display: flex;
@@ -21,10 +45,10 @@ body {
 }
 .topnav
 {   
-    font-size:  18px;
-    z-index: 99;
+    font-size:  16px;
+    z-index: 50;
     width: 100%;
-    height: 140px;
+    height: 120px;
     position:fixed;
     flex-wrap: wrap;
     justify-content: space-center;
